[block-header] Fix header button alignment for free version. Closes #319

--- a/src/block/header/style.scss
+++ b/src/block/header/style.scss
@@ -41,6 +41,17 @@
 	}
 }
 
+.ugb-header__buttons {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-left: -0.5em;
+	margin-right: -0.5em;
+	> * {
+		margin: 0 0.5em 0.5em;
+	}
+}
+
 /**
  * Deprecated < v2
  */
